Removed the use of deprecated Integer/Long constructors and removed some explicit conversions that are not required (main.cpp cl 94808 --> 14.1.1.0)
[git-p4: depot-paths = "//dev/release.cpp/coherence-cpp-v14.1.1.0/": change = 100200]